# algokit-utils-luca-py

./: .gitignore  README.md  pyproject.toml
.github/actions/publish-docs/: action.yml
.github/workflows/: build-python.yaml  cd.yaml  check-docs.yaml  check-python.yaml  publish-devportal-docs.yml  verify-examples.yaml
docs/: api_build.py  astro.config.mjs  package.json  pnpm-lock.yaml  sidebar.config.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/advanced/: debugging.md  dispenser-client.md  indexer.md  modular-imports.md  transaction-composer.md
docs/src/content/docs/concepts/building/: app-client.md  app-deploy.md  app.md  asset.md  testing.md  transfer.md  typed-app-clients.md
docs/src/content/docs/concepts/core/: account.md  algorand-client.md  amount.md  client.md  secret-management.md  transaction.md
docs/src/content/docs/migration/: v3-migration-guide.md
docs/src/content/docs/tutorials/: quick-start.md
src/algokit_utils/applications/: app_client.py
src/algokit_utils/transactions/: transaction_composer.py  transaction_sender.py
tests/applications/: test_app_factory.py
tests/transactions/: test_fee_coverage.py
